--- a/sample.env
+++ b/sample.env
@@ -1,10 +1,15 @@
-export FLASK_ENVIRONMENT=development
+FLASK_ENVIRONMENT=development
 
 MY_EMAIL=mail for letsencrypt certificate
 FLASK_HOST=webforms.DOMAIN
 FLASK_PORT=5000
 
 PORTAL_URL=
-PORTAL_FEATURE_LAYER=
 PORTAL_USER=
 PORTAL_PASSWORD=
+
+CASES_LAYER=covid19_cases
+CASES_TITLE=covid19_cases
+
+PPE_LAYER=HOSCAP_PPE_inventory
+PPE_TITLE="HOSCAP PPE inventory"
