--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
+# Sadly arcgis, numpy and DLLs don't get along with python 3.8 on Windows.
+python=3.6.10
 flask>=1.1.2
 flask-bootstrap>=3.2
 flask-wtf>=0.14
-arcgis>=1.8.0
+arcgis>=1.8.2
 tzlocal>=2.1
 python-dotenv>=0.13
