--- a/sample.env
+++ b/sample.env
@@ -8,8 +8,6 @@ PORTAL_URL=
 PORTAL_USER=
 PORTAL_PASSWORD=
 
-CASES_LAYER=covid19_cases
-CASES_TITLE=covid19_cases
-
-PPE_LAYER=HOSCAP_PPE_inventory
-PPE_TITLE="HOSCAP PPE inventory"
+COVID_CASES_URL=https://delta.co.clatsop.or.us/server/rest/services/COVID19/covid19_cases/FeatureServer/0
+PUBLIC_WEEKLY_URL=https://delta.co.clatsop.or.us/server/rest/services/covid19_public_weekly_data/FeatureServer/0
+PPE_INVENTORY_URL=https://delta.co.clatsop.or.us/server/rest/services/COVID19/covid19_ppe_inventory/FeatureServer/0
