--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,7 +4,6 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-    
         {
             "name": "Python: Current File",
             "type": "python",
@@ -18,6 +17,7 @@
         {
             "name": "Python: Flask",
             "type": "python",
+            "console": "internalConsole",
             "request": "launch",
             "module": "flask",
             "env": {
