--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
 # Sadly arcgis, numpy and DLLs don't get along with python 3.8 on Windows.
 python=3.6.10
 flask>=1.1.2
-flask-bootstrap>=3.2
+flask-bootstrap>=3.3
 flask-wtf>=0.14
+flask-debugtoolbar>=0.10.1
 arcgis>=1.8.3
 tzlocal>=2.1
-python-dotenv>=0.13
+python-dotenv>=0.15
 bs4>=4.9
 pytz
